WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145793
[EFL] Fix a crash on MiniBrowser when running on debug mode
https://bugs.webkit.org/show_bug.cgi?id=145793
Summary
[EFL] Fix a crash on MiniBrowser when running on debug mode
Gyuyoung Kim
Reported
2015-06-09 02:00:00 PDT
r185314
missed to initialize parameters.diskCacheDirectory with configuration's one.
Attachments
Patch
(1.79 KB, patch)
2015-06-09 02:00 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2015-06-09 02:00:38 PDT
Created
attachment 254558
[details]
Patch
Gyuyoung Kim
Comment 2
2015-06-09 02:07:53 PDT
Crash log is below, gyuyoung@gyuyoung-desktop:~/webkit/WebKit$ WebKitBuild/Debug/bin/MiniBrowser ASSERTION FAILED: !parameters.diskCacheDirectory.isEmpty() ../../Source/WebKit2/WebProcess/soup/WebProcessSoup.cpp(138) : void WebKit::WebProcess::platformInitializeWebProcess(WebKit::WebProcessCreationParameters&&) 1 0x7f43dbe3dce4 WTFCrash 2 0x7f43e130289a WebKit::WebProcess::platformInitializeWebProcess(WebKit::WebProcessCreationParameters&&) 3 0x7f43e10ab955 WebKit::WebProcess::initializeWebProcess(WebKit::WebProcessCreationParameters&&) 4 0x7f43e1366ecc void IPC::callMemberFunctionImpl<WebKit::WebProcess, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&), std::tuple<WebKit::WebProcessCreationParameters>, 0ul>(WebKit::WebProcess*, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters&&), std::tuple<WebKit::WebProcessCreationParameters>&&, std::index_sequence<0ul>)
WebKit Commit Bot
Comment 3
2015-06-09 03:04:20 PDT
Comment on
attachment 254558
[details]
Patch Clearing flags on attachment: 254558 Committed
r185360
: <
http://trac.webkit.org/changeset/185360
>
WebKit Commit Bot
Comment 4
2015-06-09 03:04:24 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5
2015-06-09 03:31:52 PDT
***
Bug 145794
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug