[EFL] Fix a crash on MiniBrowser when running on debug mode https://bugs.webkit.org/show_bug.cgi?id=145793

Reviewed by Carlos Garcia Campos.

r185314 missed to initialize parameters.diskCacheDirectory with configuration's one.

* UIProcess/efl/WebProcessPoolEfl.cpp:
(WebKit::WebProcessPool::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/163836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185360 268f45cc-cd09-0410-ab3c-d52691b4dbfc